# NLP_Assignments_st126316

./: README.md
Assignment1-Word2Vec-Glove/: A1.ipynb  README.md  pyproject.toml
Assignment1-Word2Vec-Glove/app/: app.py  paragraph_texts.json  paragraph_vectors.npy  word2id.json
Assignment1-Word2Vec-Glove/embeddings/: glove_embeddings.npy  sg_neg_embeddings.npy  sg_softmax_embeddings.npy
Assignment1-Word2Vec-Glove/reference_files/: 01 - Word2Vec (Skipgram) from Scratch.ipynb
Assignment2-LSTM/artifacts/: story_lstm_scratch_full.pt  vocab_char_full.json
Assignment3-Machine Translation/: A3.ipynb  README.md
